started population class

--- a/GeneticAlgorithms/routeProblemCPP/routeProblem/routeProblem.vcxproj.filters
+++ b/GeneticAlgorithms/routeProblemCPP/routeProblem/routeProblem.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\classes\Individual.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\classes\Population.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\supportingFiles\generateWorld.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\classes\Individual.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\classes\Population.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
