--- a/GeneticAlgorithms/routeProblemCPP/routeProblem/routeProblem.vcxproj
+++ b/GeneticAlgorithms/routeProblemCPP/routeProblem/routeProblem.vcxproj
@@ -62,6 +62,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -76,6 +79,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -95,6 +101,7 @@
     <ClInclude Include="src\classes\Population.h" />
     <ClInclude Include="src\classes\Individual.h" />
     <ClInclude Include="src\supportingFiles\generateWorld.h" />
+    <ClInclude Include="src\supportingFiles\gnuPlotIostream.h" />
     <ClInclude Include="src\supportingFiles\printVector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
